added session end point